Initial API design and naming refactors

--- a/photopicker/src/main/res/layout/activity_image_show.xml
+++ b/photopicker/src/main/res/layout/activity_image_show.xml
@@ -19,7 +19,7 @@
             android:indeterminateTintMode="src_atop"
             android:indeterminateTint="@color/pickerColorBackground"/>
 
-    <ImageView
+    <com.github.chrisbanes.photoview.PhotoView
             android:contentDescription="@string/photo"
             android:id="@+id/image_show_view"
             android:layout_width="0dp"
