--- a/photopicker/src/main/res/layout/photo_picker.xml
+++ b/photopicker/src/main/res/layout/photo_picker.xml
@@ -26,7 +26,7 @@
                     android:id="@+id/search_imageView"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
-                    android:layout_margin="4dp"
+                    android:padding="8dp"
                     android:src="@drawable/ic_search_24dp"
                     android:tint="@color/colorPrimaryDark"
                     app:layout_constraintTop_toTopOf="parent"
@@ -36,7 +36,8 @@
 
             <EditText
                     android:id="@+id/search_editText"
-                    android:layout_margin="4dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="4dp"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:singleLine="true"
@@ -56,7 +57,7 @@
                     android:id="@+id/clearSearch_imageView"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
-                    android:layout_margin="4dp"
+                    android:padding="8dp"
                     android:src="@drawable/ic_clear_24dp"
                     android:tint="@color/colorPrimaryDark"
                     app:layout_constraintTop_toTopOf="parent"
@@ -83,6 +84,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:indeterminate="true"
+            android:visibility="gone"
             android:background="#00000000"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
