--- a/photopicker/src/main/res/layout/photo_picker.xml
+++ b/photopicker/src/main/res/layout/photo_picker.xml
@@ -11,14 +11,19 @@
         android:focusableInTouchMode="true">
 
     <androidx.cardview.widget.CardView
+            app:cardBackgroundColor="@color/transluscent"
             app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/search_cardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardElevation="14dp"
             app:cardCornerRadius="8dp"
-            android:layout_margin="8dp">
+            android:layout_marginTop="12dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp">
+
         <androidx.constraintlayout.widget.ConstraintLayout
+                android:background="@color/transluscent"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -29,15 +34,18 @@
                     android:padding="8dp"
                     android:src="@drawable/ic_search_24dp"
                     android:tint="@color/colorPrimaryDark"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:background="?attr/selectableItemBackgroundBorderless"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/search_editText"/>
 
-            <EditText
+            <com.unsplash.pickerandroid.photopicker.customview.EditTextView
                     android:id="@+id/search_editText"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginBottom="4dp"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:singleLine="true"
@@ -45,7 +53,7 @@
                     android:maxLines="1"
                     android:imeOptions="actionDone"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
-                    android:textSize="20sp"
+                    android:textSize="22sp"
                     android:hint="@string/search"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -60,6 +68,9 @@
                     android:padding="8dp"
                     android:src="@drawable/ic_clear_24dp"
                     android:tint="@color/colorPrimaryDark"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:background="?attr/selectableItemBackgroundBorderless"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@id/search_editText"
@@ -73,7 +84,7 @@
             android:layout_height="0dp"
             android:padding="4dp"
             android:clipToPadding="false"
-            app:layout_constraintTop_toBottomOf="@id/search_cardView"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
