--- a/photopicker/src/main/res/values/colors.xml
+++ b/photopicker/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="pickerColorDarkOverlay">#dd000000</color>
     <color name="pickerColorGradientOverlay">#44000000</color>
     <color name="pickerColorSelectedOverlay">#66ffffff</color>
+    <color name="transluscent">#8FFFFFFF</color>
 </resources>
