--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.unsplash.pickerandroid.photopicker.customview.UnsplashPhotoPicker
+<com.unsplash.pickerandroid.photopicker.presentation.UnsplashPhotoPicker
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-</com.unsplash.pickerandroid.photopicker.customview.UnsplashPhotoPicker>
+</com.unsplash.pickerandroid.photopicker.presentation.UnsplashPhotoPicker>
