--- a/photopicker/src/main/res/layout/activity_image_show.xml
+++ b/photopicker/src/main/res/layout/activity_image_show.xml
@@ -9,7 +9,7 @@
         android:focusable="true"
         android:layout_height="match_parent">
 
-    <com.unsplash.pickerandroid.photopicker.customview.AspectRatioPhotoView
+    <com.unsplash.pickerandroid.photopicker.presentation.AspectRatioPhotoView
             android:id="@+id/image_photoView"
             android:layout_height="0dp"
             android:layout_width="0dp"
