The PhotoPicker now slides up when we reach the top, similar to Gmail

--- a/photopicker/src/main/res/layout/item_unsplash_photo.xml
+++ b/photopicker/src/main/res/layout/item_unsplash_photo.xml
@@ -16,6 +16,7 @@
             android:layout_width="0dp"
             android:scaleType="centerCrop"
             android:layout_height="wrap_content"
+            android:transitionName="@string/transitionName"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
