--- a/photopicker/src/main/res/layout/activity_image_show.xml
+++ b/photopicker/src/main/res/layout/activity_image_show.xml
@@ -15,6 +15,7 @@
             android:layout_width="0dp"
             android:layout_margin="8dp"
             android:contentDescription="@string/photo"
+            android:transitionName="@string/transitionName"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toTopOf="@id/imageText_linearLayout"
