--- a/photopicker/src/main/res/layout/photo_picker.xml
+++ b/photopicker/src/main/res/layout/photo_picker.xml
@@ -20,7 +20,8 @@
             app:cardCornerRadius="8dp"
             android:layout_marginTop="12dp"
             android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp">
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="4dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:background="@color/transluscentWhite"
@@ -31,7 +32,8 @@
                     android:id="@+id/search_imageView"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
-                    android:padding="8dp"
+                    android:padding="12dp"
+                    android:layout_marginEnd="4dp"
                     android:src="@drawable/ic_search_24dp"
                     android:tint="@color/colorPrimaryDark"
                     android:clickable="true"
@@ -44,10 +46,10 @@
 
             <com.unsplash.pickerandroid.photopicker.presentation.EditTextView
                     android:id="@+id/search_editText"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
                     android:singleLine="true"
                     android:lines="1"
                     android:maxLines="1"
@@ -65,7 +67,8 @@
                     android:id="@+id/clearSearch_imageView"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
-                    android:padding="8dp"
+                    android:padding="12dp"
+                    android:layout_marginStart="4dp"
                     android:src="@drawable/ic_clear_24dp"
                     android:tint="@color/colorPrimaryDark"
                     android:clickable="true"
@@ -95,7 +98,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:indeterminate="true"
-            android:visibility="gone"
             android:background="#00000000"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
