--- a/photopicker/src/main/res/layout/fragment_image_show.xml
+++ b/photopicker/src/main/res/layout/fragment_image_show.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:background="@color/transluscentBlack"
         android:id="@+id/imageShow_constraintLayout"
         android:layout_width="match_parent"
@@ -15,7 +16,6 @@
             android:layout_width="0dp"
             android:layout_margin="8dp"
             android:contentDescription="@string/photo"
-            android:transitionName="@string/transitionName"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toTopOf="@id/imageText_linearLayout"
@@ -23,7 +23,6 @@
 
     <ProgressBar
             android:id="@+id/image_progressBar"
-            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -43,24 +42,30 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent">
         <TextView
-                android:text="Photo By "
+                android:text="@string/photoBy"
                 android:textColor="@color/pickerColorBackground"
+                android:textSize="16sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         <TextView
-                android:text="Leeroy Jenkins "
+                android:id="@+id/user_textView"
                 android:textColor="@color/pickerColorBackground"
+                android:textSize="16sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                tools:text=" Leeroy Jenkins "/>
         <TextView
-                android:text="on "
+                android:text="@string/on"
                 android:textColor="@color/pickerColorBackground"
+                android:textSize="16sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         <TextView
+                android:id="@+id/unsplash_textView"
                 android:text="@string/unsplash"
                 android:textColor="@color/pickerColorBackground"
+                android:textSize="16sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"/>
