--- a/photopicker/src/main/res/layout/fragment_image_show.xml
+++ b/photopicker/src/main/res/layout/fragment_image_show.xml
@@ -3,7 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:background="@color/transluscentBlack"
+        android:background="@color/pickerShowPhotoBackground"
         android:id="@+id/imageShow_constraintLayout"
         android:layout_width="match_parent"
         android:clickable="true"
@@ -42,6 +42,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent">
         <TextView
+                android:id="@+id/photoBy_textView"
                 android:text="@string/photoBy"
                 android:textColor="@color/pickerColorBackground"
                 android:textSize="16sp"
@@ -56,6 +57,7 @@
                 android:textStyle="bold"
                 tools:text=" Leeroy Jenkins "/>
         <TextView
+                android:id="@+id/on_textView"
                 android:text="@string/on"
                 android:textColor="@color/pickerColorBackground"
                 android:textSize="16sp"
