--- a/photopicker/src/main/res/layout/photo_picker.xml
+++ b/photopicker/src/main/res/layout/photo_picker.xml
@@ -4,6 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/photoPicker_constraintLayout"
+        android:background="@color/pickerColorBackground"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:orientation="vertical"
@@ -11,7 +12,7 @@
         android:focusableInTouchMode="true">
 
     <androidx.cardview.widget.CardView
-            app:cardBackgroundColor="@color/transluscentWhite"
+            app:cardBackgroundColor="@color/pickerSearchBarBackground"
             app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/search_cardView"
             android:layout_width="match_parent"
@@ -24,7 +25,7 @@
             android:layout_marginBottom="4dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-                android:background="@color/transluscentWhite"
+                android:background="@color/pickerSearchBarBackground"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
