--- a/photopicker/src/main/res/values/colors.xml
+++ b/photopicker/src/main/res/values/colors.xml
@@ -4,11 +4,12 @@
     <color name="colorPrimary">#181818</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#181818</color>
-    <!--Please do not override those colors-->
+
+    <!--Override these colors to change the look of the Views-->
     <color name="pickerColorBackground">#ffffffff</color>
     <color name="pickerColorDarkOverlay">#dd000000</color>
     <color name="pickerColorGradientOverlay">#44000000</color>
     <color name="pickerColorSelectedOverlay">#66ffffff</color>
-    <color name="transluscentWhite">#8FFFFFFF</color>
-    <color name="transluscentBlack">#8F000000</color>
+    <color name="pickerSearchBarBackground">#8FFFFFFF</color>
+    <color name="pickerShowPhotoBackground">#8F000000</color>
 </resources>
