--- a/photopicker/src/main/res/layout/fragment_image_show.xml
+++ b/photopicker/src/main/res/layout/fragment_image_show.xml
@@ -10,7 +10,7 @@
         android:focusable="true"
         android:layout_height="match_parent">
 
-    <com.unsplash.pickerandroid.photopicker.presentation.AspectRatioPhotoView
+    <com.github.basshelal.unsplashpicker.presentation.AspectRatioPhotoView
             android:id="@+id/image_photoView"
             android:layout_height="0dp"
             android:layout_width="0dp"
