--- a/photopicker/src/main/res/layout/item_unsplash_photo.xml
+++ b/photopicker/src/main/res/layout/item_unsplash_photo.xml
@@ -49,7 +49,7 @@
             android:textSize="12sp"
             android:layout_margin="8dp"
             android:ellipsize="end"
-            android:maxLines="1"
+            android:lines="1"
             app:layout_constraintRight_toLeftOf="@+id/item_unsplash_photo_checked_image_view"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constrainedWidth="true"
