--- a/photopicker/src/main/res/layout/photo_picker.xml
+++ b/photopicker/src/main/res/layout/photo_picker.xml
@@ -84,7 +84,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
-    <androidx.recyclerview.widget.RecyclerView
+    <com.github.basshelal.unsplashpicker.presentation.UnsplashPhotoPickerRecyclerView
             android:id="@+id/unsplashPicker_recyclerView"
             android:layout_width="0dp"
             android:layout_height="0dp"
