--- a/photopicker/src/main/res/layout/photo_picker.xml
+++ b/photopicker/src/main/res/layout/photo_picker.xml
@@ -1,85 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/photoPicker_constraintLayout"
-        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:orientation="vertical"
+        android:layout_height="match_parent"
         android:focusable="true"
-        android:focusableInTouchMode="true">
+        android:focusableInTouchMode="true"
+        android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-            app:cardBackgroundColor="@color/photoPickerPrivate_searchBarBackground"
-            app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/search_cardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardElevation="14dp"
-            app:cardCornerRadius="8dp"
-            android:layout_marginTop="12dp"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="6dp">
+            android:layout_marginBottom="8dp"
+            app:cardBackgroundColor="@color/photoPickerPrivate_searchBarBackground"
+            app:cardCornerRadius="12dp"
+            app:cardElevation="14dp"
+            app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-                android:background="@color/photoPickerPrivate_searchBarBackground"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@color/photoPickerPrivate_searchBarBackground">
 
             <ImageView
                     android:id="@+id/search_imageView"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
-                    android:padding="12dp"
                     android:layout_marginEnd="4dp"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:backgroundTint="@color/photoPickerPrivate_searchBarBackground"
+                    android:clickable="true"
+                    android:contentDescription="@string/search"
+                    android:focusable="true"
+                    android:padding="12dp"
                     android:src="@drawable/ic_search_24dp"
                     android:tint="@color/photoPickerPrivate_searchBarImageTint"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/search_editText"
-                    android:contentDescription="@string/search"/>
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
             <com.github.basshelal.unsplashpicker.presentation.EditTextView
                     android:id="@+id/search_editText"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:background="@color/photoPickerPrivate_searchBarBackground"
+                    android:backgroundTint="@color/photoPickerPrivate_searchBarBackground"
+                    android:hint="@string/search"
+                    android:imeOptions="actionDone"
+                    android:lines="1"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
                     android:singleLine="true"
-                    android:lines="1"
-                    android:imeOptions="actionDone"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
-                    android:textSize="22sp"
                     android:textColor="@color/photoPickerPrivate_searchBarImageTint"
-                    android:hint="@string/search"
-                    app:layout_constraintTop_toTopOf="parent"
+                    android:textSize="22sp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/search_imageView"
                     app:layout_constraintEnd_toStartOf="@id/clearSearch_imageView"
-                    tools:text="@string/search"/>
+                    app:layout_constraintStart_toEndOf="@id/search_imageView"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="@string/search" />
 
             <ImageView
                     android:id="@+id/clearSearch_imageView"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
-                    android:padding="12dp"
                     android:layout_marginStart="4dp"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:backgroundTint="@color/photoPickerPrivate_searchBarBackground"
+                    android:clickable="true"
+                    android:contentDescription="@string/clear"
+                    android:focusable="true"
+                    android:padding="12dp"
                     android:src="@drawable/ic_clear_24dp"
                     android:tint="@color/photoPickerPrivate_searchBarImageTint"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/search_editText"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:contentDescription="@string/clear"/>
+                    app:layout_constraintStart_toEndOf="@id/search_editText"
+                    app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
@@ -88,23 +91,22 @@
             android:id="@+id/unsplashPicker_recyclerView"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:padding="4dp"
             android:clipToPadding="false"
-            app:layout_constraintTop_toTopOf="parent"
+            android:padding="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:listitem="@layout/item_unsplash_photo"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:listitem="@layout/item_unsplash_photo" />
 
     <ProgressBar
             android:id="@+id/unsplashPicker_progressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:indeterminate="true"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/search_cardView">
-    </ProgressBar>
+            app:layout_constraintTop_toBottomOf="@+id/search_cardView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
