--- a/photopicker/src/main/res/drawable/ic_info_24dp.xml
+++ b/photopicker/src/main/res/drawable/ic_info_24dp.xml
@@ -2,9 +2,10 @@
         android:width="24dp"
         android:height="24dp"
         android:autoMirrored="true"
+        android:tint="#FFFFFF"
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
     <path
-            android:fillColor="@android:color/darker_gray"
-            android:pathData="M19,6.41L17.59,5 12,10.59 6.41,5 5,6.41 10.59,12 5,17.59 6.41,19 12,13.41 17.59,19 19,17.59 13.41,12z" />
+            android:fillColor="#FF000000"
+            android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM13,17h-2v-6h2v6zM13,9h-2L11,7h2v2z" />
 </vector>
