--- a/photopicker/src/main/res/layout/fragment_photo_show.xml
+++ b/photopicker/src/main/res/layout/fragment_photo_show.xml
@@ -11,9 +11,12 @@
 
     <com.github.basshelal.unsplashpicker.presentation.AspectRatioPhotoView
             android:id="@+id/image_photoView"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_margin="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="32dp"
             android:contentDescription="@string/photo"
             app:layout_constraintBottom_toTopOf="@id/imageText_linearLayout"
             app:layout_constraintLeft_toLeftOf="parent"
